--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background-color: rgb(225, 174, 222);
 }
@@ -7,12 +12,13 @@ body {
     color: rgb(255, 255, 255);
     display: flex;
     justify-content: space-around;
-    padding: 24px 0;
+    padding: 0;
+    height: 100px;
     font-size: 35px;
 }
 
 .cabecalhoListaItem {
     display: inline-block;
-    margin: 0 16px;
-    padding: 12px 0;
+    margin: 13px 38px;
+    padding: 2px 0;
 }
