--- a/style.css
+++ b/style.css
@@ -12,40 +12,44 @@ body {
     background-color: rgb(29, 34, 49);
     color: rgb(255, 255, 255);
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     padding: 0;
     font-size: 35px;
 }
 
 .cabecalhoImg {
     width: 200px;
+    margin: 0 50px;
     order: 0;
 }
 
 .cabecalhoListaItem {
+    background-color: rgb(54, 63, 88);
     display: inline-block;
     margin: 13px 38px;
-    padding: 2px 0;
+    padding: 2px 25px;
+    border-radius: 10px;
 }
 
 .sobreImagem{
     width: 200px;
-    margin: 10px 150px;
-    border-radius: 10px;
+    margin: 10px 10px;
+    border-radius: 15px;
     border: 5px solid #171803;
 }
 
 .sobre{
-    background-image: linear gradient(#FFFFFF, #FFFFFF);
+    background-image: linear-gradient(#E1AEDE, #E1AEDE);
     color: #000000;
     display:flex;
-    justify-content:flex-start;
+    justify-content:space-between;
     align-items:center;
-    padding: 70px 120px;
+    margin: 0px 200px;
+    padding: 30px 40px;
 }
 
 .sobreConteudo{
-    width: 500px;
+    width: 600px;
     padding: 0px 50px;
 }
 
