--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     color: rgb(255, 255, 255);
     display: flex;
     justify-content: space-between;
-    padding: 0;
+    padding: 0 10px;
     font-size: 35px;
 }
 
@@ -24,16 +24,23 @@ body {
 }
 
 .cabecalhoListaItem {
+    display: inline-block;
+    margin: 0 110px;
+    
+}
+
+.Item {
     background-color: rgb(54, 63, 88);
     display: inline-block;
-    margin: 13px 38px;
-    padding: 2px 25px;
+    margin: 20px 45px;
+    padding: 5px 35px;
     border-radius: 10px;
+    border: 3px solid #FFFFFF;
 }
 
 .sobreImagem{
     width: 200px;
-    margin: 10px 10px;
+    margin: 10px 100px;
     border-radius: 15px;
     border: 5px solid #171803;
 }
@@ -44,8 +51,8 @@ body {
     display:flex;
     justify-content:space-between;
     align-items:center;
-    margin: 0px 200px;
-    padding: 30px 40px;
+    margin: 15px 200px;
+    padding: 40px 40px;
 }
 
 .sobreConteudo{
