--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
 
 .sobreImagem{
     width: 200px;
-    margin: 10px 100px;
+    margin: 10px 90px;
     border-radius: 15px;
     border: 5px solid #171803;
 }
@@ -68,4 +68,9 @@ body {
 .sobreTextoUm {
     font-size: 25px;
     padding: 0px 10px;
+}
+
+.membros {
+    display: flex;
+    margin: 10px 100px;
 }
