--- a/style.css
+++ b/style.css
@@ -70,7 +70,37 @@ body {
     padding: 0px 10px;
 }
 
-.membros {
-    display: flex;
-    margin: 10px 100px;
+.membroImagem{
+    width:120px;
+    border-radius: 20px;
+    /*testar inline-block*/
+}
+
+.membroIcone{
+    width: 24px;
+}
+
+.membroDiv{
+    text-align: center;
+}
+
+.membrosTitulo{
+    text-align:center;
+    padding: 25px 0;
+}
+
+.membrosTodos{
+    display: grid;
+    /*Transforma o display em quadrados*/
+    grid-template-columns: 10% 20% 20% 20% 20%;
+    /*Quanto cada coluna ocupa na página, em sequência*/
+}
+
+.membroDiv{
+    text-align:center;
+    padding-bottom: 17px;
+}
+
+.membros{
+    background-color: #E1AEDE;
 }
